--- a/app/src/main/res/layout/activity_on_login.xml
+++ b/app/src/main/res/layout/activity_on_login.xml
@@ -14,7 +14,12 @@
     android:layout_height="wrap_content"
     android:text="" />
 
-<Button
+  <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:orientation="horizontal">
+
+    <Button
     android:id="@+id/button"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -25,5 +30,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Upload" />
+      <Button
+          android:id="@+id/button_logout"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text="Upload" />
+
+  </LinearLayout>
 
 </LinearLayout>
