--- a/app/src/main/res/layout/activity_on_login.xml
+++ b/app/src/main/res/layout/activity_on_login.xml
@@ -17,16 +17,17 @@
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:orientation="horizontal">
+      android:orientation="horizontal"
+      android:gravity="center">
 
     <Button
-    android:id="@+id/button"
+    android:id="@+id/button_pickImage"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="Pick" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/button_upload"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Upload" />
@@ -34,7 +35,7 @@
           android:id="@+id/button_logout"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:text="Upload" />
+          android:text="Logout" />
 
   </LinearLayout>
 
